@@ -4,7 +4,8 @@ A21.2.018 (ZZ018)
 * Bug fixes
 * Added restaurant_03, warehouse_04, store_s_03, store_s_04, store_xs_16,
     store_s_05, gyroport_01, tfp_docks_01, tfp_docks_05.
-* Added rwg_tile_gateway_straight_zztong_07, rwg_tile_gateway_t_zztong_02.
+* Added rwg_tile_gateway_straight_zztong_07, rwg_tile_gateway_t_zztong_02,
+    rwg_tile_countryresidential_corner_zztong_01.
 * More infestation quests.
 
 A21.1.017 (ZZ017)
